--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.2.0",
+    "@headlessui/react": "^1.4.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -13,16 +14,23 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.1.8",
+    "autoprefixer": "^9.8.6",
     "firebase": "^9.0.0",
+    "moment": "^2.29.1",
+    "postcss": "^7.0.36",
+    "postcss-cli": "^8.3.1",
+    "postcss-loader": "^6.1.1",
+    "rc-scrollbars": "^1.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.9",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "cross-env TAILWIND_MODE=watch craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
@@ -47,7 +55,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.6",
+    "cross-env": "^7.0.3",
     "postcss": "^7.0.36",
+    "postcss-loader": "^6.1.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.9"
   }
 }
